docs: update read a book called ATOMIC HABITS

--- a/2023.md
+++ b/2023.md
@@ -23,6 +23,8 @@ January 2022
 
 ## Outside of work
 
-* [ ] I have read a book called **เริ่มให้ได้แล้วมันจะง่ายกว่าที่คิด (โทโยคาซึ สึรุตะ)**.
+* [x] I have read a book called **เริ่มให้ได้แล้วมันจะง่ายกว่าที่คิด (โทโยคาซึ สึรุตะ)**.
+
+* [ ] I have read a book called **ATOMIC HABITS เพราะชีวิตดีได้กว่าที่เป็น (JAMES CLEAR)**.
 
 ## General prompts
