docs: add collaboration and mentership

--- a/2023.md
+++ b/2023.md
@@ -5,7 +5,7 @@
 [comment]: # (* List the major goals here!)
 
 January 2022
-* [ ] I want to learn Haskell **(Haskell Programming from First Principles)**
+* [x] I want to learn `All You Need is Lambda` **(Haskell Programming from First Principles)**
 
 ## Goals for next year
 
@@ -14,6 +14,7 @@ January 2022
 ## Projects
 
 ## Collaboration & mentorship
+* I had the opportunity to be a co-teacher for Golang Programming Languate at Thaibev.
 
 ## Design & documentation
 
