docs: add new goals for this year

--- a/2023.md
+++ b/2023.md
@@ -4,8 +4,12 @@
 
 [comment]: # (* List the major goals here!)
 
-January 2022
+January 2023
 * [x] I want to learn `All You Need is Lambda` **(Haskell Programming from First Principles)**
+
+February 2023
+* [x] I want to take a course **Mathematics for Working Programmers Day 3-4**.
+* [ ] I want to learn `Hello, Haskell!` **(Haskell Programming from First Principles)**
 
 ## Goals for next year
 
