feat: add new book

--- a/2023.md
+++ b/2023.md
@@ -32,4 +32,6 @@ February 2023
 
 * [ ] I have read a book called **ATOMIC HABITS เพราะชีวิตดีได้กว่าที่เป็น (JAMES CLEAR)**.
 
+* [ ] I have read a book called **Best Practices of Spell Design (JEREMY KUBICA)**.
+
 ## General prompts
