--- a/2023.md
+++ b/2023.md
@@ -30,8 +30,10 @@ February 2023
 
 * [x] I have read a book called **เริ่มให้ได้แล้วมันจะง่ายกว่าที่คิด (โทโยคาซึ สึรุตะ)**.
 
-* [ ] I have read a book called **ATOMIC HABITS เพราะชีวิตดีได้กว่าที่เป็น (JAMES CLEAR)**.
+* [x] I have read a book called **ATOMIC HABITS เพราะชีวิตดีได้กว่าที่เป็น (JAMES CLEAR)**.
 
 * [ ] I have read a book called **Best Practices of Spell Design (JEREMY KUBICA)**.
+
+* [ ] I have read a book called **เทคนิคทำสิ่งหนึ่งสิ่งใดให้ต่อเนื่อง (โคะบะยะชิ ทะดะอะกิ)**.
 
 ## General prompts
