feat: change to learn haskell

--- a/2023.md
+++ b/2023.md
@@ -9,6 +9,8 @@ January 2023
 
 February 2023
 * [x] I want to take a course **Mathematics for Working Programmers Day 3-4**.
+
+April 2023
 * [ ] I want to learn `Hello, Haskell!` **(Haskell Programming from First Principles)**
 
 ## Goals for next year
