--- a/2023.md
+++ b/2023.md
@@ -34,8 +34,8 @@ April 2023
 
 * [x] I have read a book called **ATOMIC HABITS เพราะชีวิตดีได้กว่าที่เป็น (JAMES CLEAR)**.
 
-* [ ] I have read a book called **Best Practices of Spell Design (JEREMY KUBICA)**.
+* [x] I have read a book called **Best Practices of Spell Design (JEREMY KUBICA)**.
 
-* [ ] I have read a book called **เทคนิคทำสิ่งหนึ่งสิ่งใดให้ต่อเนื่อง (โคะบะยะชิ ทะดะอะกิ)**.
+* [x] I have read a book called **เทคนิคทำสิ่งหนึ่งสิ่งใดให้ต่อเนื่อง (โคะบะยะชิ ทะดะอะกิ)**.
 
 ## General prompts
