feat: add new book have read

--- a/2023.md
+++ b/2023.md
@@ -38,4 +38,6 @@ April 2023
 
 * [x] I have read a book called **เทคนิคทำสิ่งหนึ่งสิ่งใดให้ต่อเนื่อง (โคะบะยะชิ ทะดะอะกิ)**.
 
+* [ ] I have read a book called **Computational Fairy Tales (JEREMY KUBICA)**.
+
 ## General prompts
