feat: add new goals in May

--- a/2023.md
+++ b/2023.md
@@ -13,6 +13,12 @@ February 2023
 April 2023
 * [ ] I want to learn `Hello, Haskell!` **(Haskell Programming from First Principles)**
 
+
+May 2023
+* [ ] I want to join `Devoxx UK 2023`
+
+    Devoxx UK is a space for developers to learn, sharpen their skills and get hands-on experience with the latest tech. At this 3-day conference we bring together a diverse group of inspiring speakers from around the world to cover the most vital developer-focused topics, latest technology advances and delve into some fascinating ideas.
+
 ## Goals for next year
 
 [comment]: # (* If it's getting towards the end of the year, maybe start writing down what might be the goals for next year.)
