feat: update new books and new goal for this year

--- a/2023.md
+++ b/2023.md
@@ -10,13 +10,17 @@ January 2023
 February 2023
 * [x] I want to take a course **Mathematics for Working Programmers Day 3-4**.
 
-April 2023
-* [ ] I want to learn `Hello, Haskell!` **(Haskell Programming from First Principles)**
-
 May 2023
-* [ ] I want to join `Devoxx UK 2023`
+* [x] I want to join `Devoxx UK 2023`
 
     Devoxx UK is a space for developers to learn, sharpen their skills and get hands-on experience with the latest tech. At this 3-day conference we bring together a diverse group of inspiring speakers from around the world to cover the most vital developer-focused topics, latest technology advances and delve into some fascinating ideas.
+
+June 2023
+* [x] Devoxx UK 2023 knowledge sharing with Team member **(Fighting The Saboteur in Your Relationships: Dealing with Cognitive Biases by Arthur Doler)**
+
+
+July 2023
+* [ ] I want to learn `Hello, Haskell!` **(Haskell Programming from First Principles)**
 
 ## Goals for next year
 
@@ -35,14 +39,16 @@ May 2023
 
 ## Outside of work
 
-* [x] I have read a book called **เริ่มให้ได้แล้วมันจะง่ายกว่าที่คิด (โทโยคาซึ สึรุตะ)**.
+* [x] I have read a book called **เริ่มให้ได้แล้วมันจะง่ายกว่าที่คิด [โทโยคาซึ สึรุตะ]**.
 
-* [x] I have read a book called **ATOMIC HABITS เพราะชีวิตดีได้กว่าที่เป็น (JAMES CLEAR)**.
+* [x] I have read a book called **ATOMIC HABITS เพราะชีวิตดีได้กว่าที่เป็น [JAMES CLEAR]**.
 
-* [x] I have read a book called **Best Practices of Spell Design (JEREMY KUBICA)**.
+* [x] I have read a book called **Best Practices of Spell Design [JEREMY KUBICA]**.
 
-* [x] I have read a book called **เทคนิคทำสิ่งหนึ่งสิ่งใดให้ต่อเนื่อง (โคะบะยะชิ ทะดะอะกิ)**.
+* [x] I have read a book called **เทคนิคทำสิ่งหนึ่งสิ่งใดให้ต่อเนื่อง [โคะบะยะชิ ทะดะอะกิ]**.
 
-* [ ] I have read a book called **Computational Fairy Tales (JEREMY KUBICA)**.
+* [ ] I have read a book called **Computational Fairy Tales [JEREMY KUBICA]**.
+
+* [ ] I have read a book called **The Blindspots Between Us: How to Overcome Unconscious Cognitive Bias and Build Better Relationships [Gleb Tsipursky, David McRaney (Foreword)]**.
 
 ## General prompts
