--- a/2023.md
+++ b/2023.md
@@ -47,6 +47,8 @@ July 2023
 
 * [x] I have read a book called **เทคนิคทำสิ่งหนึ่งสิ่งใดให้ต่อเนื่อง [โคะบะยะชิ ทะดะอะกิ]**.
 
+* [ ] I have read a book called **โอชิ เทคนิคเขียนทุกสิ่งให้กลายเป็น VIRAL [Jini]**.
+
 * [ ] I have read a book called **Computational Fairy Tales [JEREMY KUBICA]**.
 
 * [ ] I have read a book called **The Blindspots Between Us: How to Overcome Unconscious Cognitive Bias and Build Better Relationships [Gleb Tsipursky, David McRaney (Foreword)]**.
