feat: add new book to read

--- a/2023.md
+++ b/2023.md
@@ -49,6 +49,8 @@ July 2023
 
 * [x] I have read a book called **โอชิ เทคนิคเขียนทุกสิ่งให้กลายเป็น VIRAL [Jini]**.
 
+* [ ] I have read a book called **เมื่อเส้นทางการทำงานโรยไปด้วยเปลือกทุเรียน [Carina Maggar]**
+
 * [ ] I have read a book called **Computational Fairy Tales [JEREMY KUBICA]**.
 
 * [ ] I have read a book called **The Blindspots Between Us: How to Overcome Unconscious Cognitive Bias and Build Better Relationships [Gleb Tsipursky, David McRaney (Foreword)]**.
