feat: add new book to read

--- a/2023.md
+++ b/2023.md
@@ -49,7 +49,9 @@ July 2023
 
 * [x] I have read a book called **โอชิ เทคนิคเขียนทุกสิ่งให้กลายเป็น VIRAL [Jini]**.
 
-* [ ] I have read a book called **เมื่อเส้นทางการทำงานโรยไปด้วยเปลือกทุเรียน [Carina Maggar]**
+* [x] I have read a book called **เมื่อเส้นทางการทำงานโรยไปด้วยเปลือกทุเรียน [Carina Maggar]**
+
+* [ ] I have read a book called **เมื่อแมวที่บ้านคุณผันตัวมาเป็นไลฟ์โค้ช [Garnier, Stéphane]**
 
 * [ ] I have read a book called **Computational Fairy Tales [JEREMY KUBICA]**.
 
