--- a/2023.md
+++ b/2023.md
@@ -51,7 +51,7 @@ July 2023
 
 * [x] I have read a book called **เมื่อเส้นทางการทำงานโรยไปด้วยเปลือกทุเรียน [Carina Maggar]**
 
-* [ ] I have read a book called **เมื่อแมวที่บ้านคุณผันตัวมาเป็นไลฟ์โค้ช [Garnier, Stéphane]**
+* [x] I have read a book called **เมื่อแมวที่บ้านคุณผันตัวมาเป็นไลฟ์โค้ช [Garnier, Stéphane]**
 
 * [ ] I have read a book called **Computational Fairy Tales [JEREMY KUBICA]**.
 
