--- a/2023.md
+++ b/2023.md
@@ -53,6 +53,8 @@ July 2023
 
 * [x] I have read a book called **เมื่อแมวที่บ้านคุณผันตัวมาเป็นไลฟ์โค้ช [Garnier, Stéphane]**
 
+* [ ] I have read a book called **โกรธขนาดนั้น ลองพูดแบบฉันสิ! [戸田久実, ทินภาส พาหะนิชย์ (Translator)]**
+
 * [ ] I have read a book called **Computational Fairy Tales [JEREMY KUBICA]**.
 
 * [ ] I have read a book called **The Blindspots Between Us: How to Overcome Unconscious Cognitive Bias and Build Better Relationships [Gleb Tsipursky, David McRaney (Foreword)]**.
