--- a/2023.md
+++ b/2023.md
@@ -55,6 +55,8 @@ August 2023
 
 * [x] I have read a book called **โกรธขนาดนั้น ลองพูดแบบฉันสิ! [戸田久実, ทินภาส พาหะนิชย์ (Translator)]**
 
+* [ ] I have read a book called **พลังแห่งการตั้งคำถาม [Ken Mogi, 茂木 健一郎, ปาวัน การสมใจ (Translator)]**
+
 * [ ] I have read a book called **Computational Fairy Tales [JEREMY KUBICA]**.
 
 * [ ] I have read a book called **The Blindspots Between Us: How to Overcome Unconscious Cognitive Bias and Build Better Relationships [Gleb Tsipursky, David McRaney (Foreword)]**.
