docs: add new book to current reading

--- a/2023.md
+++ b/2023.md
@@ -57,6 +57,8 @@ August 2023
 
 * [x] I have read a book called **พลังแห่งการตั้งคำถาม [Ken Mogi, 茂木 健一郎, ปาวัน การสมใจ (Translator)]**
 
+* [ ] I have read a book called **เทคนิคเลิกคิดเยอะแล้วทำทันที [塚本亮, นพรดา ศิริเสถียร (Translator)]**
+
 * [ ] I have read a book called **Computational Fairy Tales [JEREMY KUBICA]**.
 
 * [ ] I have read a book called **The Blindspots Between Us: How to Overcome Unconscious Cognitive Bias and Build Better Relationships [Gleb Tsipursky, David McRaney (Foreword)]**.
