docs: update book as read

--- a/2023.md
+++ b/2023.md
@@ -61,6 +61,6 @@ August 2023
 
 * [ ] I have read a book called **Computational Fairy Tales [JEREMY KUBICA]**.
 
-* [ ] I have read a book called **The Blindspots Between Us: How to Overcome Unconscious Cognitive Bias and Build Better Relationships [Gleb Tsipursky, David McRaney (Foreword)]**.
+* [x] I have read a book called **The Blindspots Between Us: How to Overcome Unconscious Cognitive Bias and Build Better Relationships [Gleb Tsipursky, David McRaney (Foreword)]**.
 
 ## General prompts
