feat: add learn elixir

--- a/2023.md
+++ b/2023.md
@@ -18,9 +18,9 @@ May 2023
 June 2023
 * [x] Devoxx UK 2023 knowledge sharing with Team member **(Fighting The Saboteur in Your Relationships: Dealing with Cognitive Biases by Arthur Doler)**
 
-
-August 2023
+September 2023
 * [ ] I want to learn `Hello, Haskell!` **(Haskell Programming from First Principles)**
+* [x] I want to learn `Elixir: Getting started, basic data types, and basic operations.` **([Elixir School](https://elixirschool.com/en/lessons/basics/basics#getting-started-0))**
 
 ## Goals for next year
 
