feat: add new Collaboration & mentorship

--- a/2023.md
+++ b/2023.md
@@ -30,6 +30,7 @@ September 2023
 
 ## Collaboration & mentorship
 * I had the opportunity to be a co-teacher for Golang Programming Languate at Thaibev.
+* Mentoring interns / helping new team members get started
 
 ## Design & documentation
 
