feat: update learn Elixir Collections

--- a/2023.md
+++ b/2023.md
@@ -21,6 +21,7 @@ June 2023
 September 2023
 * [ ] I want to learn `Hello, Haskell!` **(Haskell Programming from First Principles)**
 * [x] I want to learn `Elixir: Getting started, basic data types, and basic operations.` **([Elixir School](https://elixirschool.com/en/lessons/basics/basics#getting-started-0))**
+* [x] I want to learn `Elixir: Collections.` **([Elixir School](https://elixirschool.com/en/lessons/basics/collections))**
 
 ## Goals for next year
 
