feat: add new book to read

--- a/2023.md
+++ b/2023.md
@@ -59,10 +59,12 @@ September 2023
 
 * [x] I have read a book called **พลังแห่งการตั้งคำถาม [Ken Mogi, 茂木 健一郎, ปาวัน การสมใจ (Translator)]**
 
-* [ ] I have read a book called **เทคนิคเลิกคิดเยอะแล้วทำทันที [塚本亮, นพรดา ศิริเสถียร (Translator)]**
+* [x] I have read a book called **เทคนิคเลิกคิดเยอะแล้วทำทันที [塚本亮, นพรดา ศิริเสถียร (Translator)]**
 
 * [ ] I have read a book called **Computational Fairy Tales [JEREMY KUBICA]**.
 
 * [x] I have read a book called **The Blindspots Between Us: How to Overcome Unconscious Cognitive Bias and Build Better Relationships [Gleb Tsipursky, David McRaney (Foreword)]**.
+
+* [x] I have read a book called **ฉันหมด Passion หรือแค่ยังหามันไม่เจอ [Brad Stulberg, Steve Magness, แป้ง ไตรรัตนานุสรณ์ (Translator)]**
 
 ## General prompts
