feat: add new book currently reading

--- a/2023.md
+++ b/2023.md
@@ -67,4 +67,6 @@ September 2023
 
 * [x] I have read a book called **ฉันหมด Passion หรือแค่ยังหามันไม่เจอ [Brad Stulberg, Steve Magness, แป้ง ไตรรัตนานุสรณ์ (Translator)]**
 
+* [ ] I have read a book called **เป็นมนุษย์แฮปปี้ในโลกที่มีแต่เรื่องบ้าๆ [Hepburn, Emma]**
+
 ## General prompts
