docs: ✏️ add new book to read

--- a/2023.md
+++ b/2023.md
@@ -61,12 +61,12 @@ September 2023
 
 * [x] I have read a book called **เทคนิคเลิกคิดเยอะแล้วทำทันที [塚本亮, นพรดา ศิริเสถียร (Translator)]**
 
-* [ ] I have read a book called **Computational Fairy Tales [JEREMY KUBICA]**.
+* [x] I have read a book called **Computational Fairy Tales [JEREMY KUBICA]**.
 
 * [x] I have read a book called **The Blindspots Between Us: How to Overcome Unconscious Cognitive Bias and Build Better Relationships [Gleb Tsipursky, David McRaney (Foreword)]**.
 
 * [x] I have read a book called **ฉันหมด Passion หรือแค่ยังหามันไม่เจอ [Brad Stulberg, Steve Magness, แป้ง ไตรรัตนานุสรณ์ (Translator)]**
 
-* [ ] I have read a book called **เป็นมนุษย์แฮปปี้ในโลกที่มีแต่เรื่องบ้าๆ [Hepburn, Emma]**
+* [x] I have read a book called **แด่มนุษย์ทำงานผู้แสนเจ็บปวด [Naomi Shragai, ทินกฤติ กลิ่นหวน(Translator)]**
 
 ## General prompts
