docs: ✏️ add new book to read

--- a/2023.md
+++ b/2023.md
@@ -69,4 +69,6 @@ September 2023
 
 * [x] I have read a book called **แด่มนุษย์ทำงานผู้แสนเจ็บปวด [Naomi Shragai, ทินกฤติ กลิ่นหวน(Translator)]**
 
+* [x] I have read a book called **The CS Detective: An Algorithmic Tale of Crime, Conspiracy, and Computation [Jeremy Kubica]**
+
 ## General prompts
