docs: ✏️ add 2024 and edit todo in 2023

--- a/2023.md
+++ b/2023.md
@@ -34,6 +34,7 @@ September 2023
 * Mentoring interns / helping new team members get started
 
 ## Design & documentation
+* I try to write the design docs to clarify technical spec, How we plan to solve a problem.
 
 ## Company building
 
