docs: ✏️ make book as read

--- a/2024.md
+++ b/2024.md
@@ -23,6 +23,6 @@ January 2024
 
 ## Outside of work
 
-* [ ] I have read a book called **ซ่อมแซมสุขที่สึกหรอ [Guy Winch, ลลิตา ผลผลา (Translator)]**.
+* [x] I have read a book called **ซ่อมแซมสุขที่สึกหรอ [Guy Winch, ลลิตา ผลผลา (Translator)]**.
 
 ## General prompts
