docs: ✏️ make new book to read

--- a/2024.md
+++ b/2024.md
@@ -25,4 +25,8 @@ January 2024
 
 * [x] I have read a book called **ซ่อมแซมสุขที่สึกหรอ [Guy Winch, ลลิตา ผลผลา (Translator)]**.
 
+* [x] I have read a book called **คุณคางคกไปพบนักจิตบำบัด [Robert De Board, อรดา ลีลานุช (Translator)]**.
+
+* [ ] I have read a book called **ฉันก็แค่ไม่ชอบโลกที่วุ่นวาย [Maureen Marzi Wilson, พรเลิศ อิฐฐ์ (Translator)]**.
+
 ## General prompts
