docs: ✏️ update end of 2023

--- a/2023.md
+++ b/2023.md
@@ -23,6 +23,9 @@ September 2023
 * [x] I want to learn `Elixir: Getting started, basic data types, and basic operations.` **([Elixir School](https://elixirschool.com/en/lessons/basics/basics#getting-started-0))**
 * [x] I want to learn `Elixir: Collections.` **([Elixir School](https://elixirschool.com/en/lessons/basics/collections))**
 
+December 2023
+* [x] I want to take a course **Programming: from Zero to One - by Aj. Dave**.
+
 ## Goals for next year
 
 [comment]: # (* If it's getting towards the end of the year, maybe start writing down what might be the goals for next year.)
