feat: 🎸 add new book to read

--- a/2024.md
+++ b/2024.md
@@ -27,6 +27,10 @@ January 2024
 
 * [x] I have read a book called **คุณคางคกไปพบนักจิตบำบัด [Robert De Board, อรดา ลีลานุช (Translator)]**.
 
-* [ ] I have read a book called **ฉันก็แค่ไม่ชอบโลกที่วุ่นวาย [Maureen Marzi Wilson, พรเลิศ อิฐฐ์ (Translator)]**.
+* [x] I have read a book called **ฉันก็แค่ไม่ชอบโลกที่วุ่นวาย [Maureen Marzi Wilson, พรเลิศ อิฐฐ์ (Translator)]**.
+
+* [x] I have read a book called **Thinking in Algorithms: How to Combine Computer Analysis and Human Creativity for Better Problem-Solving and Decision-Making [Albert Rutherford]**.
+
+* [ ] I have read a book called **ช่างมันเถอะ ! อีกไม่กี่ปีเราก็เป็นเถ้าธุลีกันหมดแล้ว [Fujino Tomoya, กมลวรรณ เพ็ญอร่าม (Translator)]**.
 
 ## General prompts
