docs: ✏️ update read a book

--- a/2024.md
+++ b/2024.md
@@ -31,6 +31,12 @@ January 2024
 
 * [x] I have read a book called **Thinking in Algorithms: How to Combine Computer Analysis and Human Creativity for Better Problem-Solving and Decision-Making [Albert Rutherford]**.
 
-* [ ] I have read a book called **ช่างมันเถอะ ! อีกไม่กี่ปีเราก็เป็นเถ้าธุลีกันหมดแล้ว [Fujino Tomoya, กมลวรรณ เพ็ญอร่าม (Translator)]**.
+* [x] I have read a book called **ช่างมันเถอะ ! อีกไม่กี่ปีเราก็เป็นเถ้าธุลีกันหมดแล้ว [Fujino Tomoya, กมลวรรณ เพ็ญอร่าม (Translator)]**.
+
+* [x] I have read a book called **ในออฟฟิศมี "พี่คนนั้น" คนที่ทำให้วันจันทร์โคตรน่าเบื่อ [Peter Economy, พัดชา (Translator)]**.
+
+* [x] I have read a book called **ถ้าอีก 1 ปีฉันจะต้องตาย... [Taketoshi Ozawa, 小澤 竹俊, วรพล สิงขรอาจ]**.
+
+* [x] I have read a book called **เมื่อทุกอย่างปกติดี ก็ถึงเวลาที่ต้องเปลี่ยนแปลง [John P. Kotter, Holger Rathgeber, ปิติ วัฒนาธร (Translator)]**.
 
 ## General prompts
