docs: add new book to read

--- a/2024.md
+++ b/2024.md
@@ -39,4 +39,6 @@ January 2024
 
 * [x] I have read a book called **เมื่อทุกอย่างปกติดี ก็ถึงเวลาที่ต้องเปลี่ยนแปลง [John P. Kotter, Holger Rathgeber, ปิติ วัฒนาธร (Translator)]**.
 
+* [x] I have read a book called **ดูแวบแรกเป็นคนดีนี่แหละตัวดี [Sōta Shimozono, 下園 壮太(ชิโมโซโนะ โซตะ), ณัฐกฤตา เพ็ญกุล (Translator)]**.
+
 ## General prompts
