docs: ✏️ add new book to read

--- a/2024.md
+++ b/2024.md
@@ -41,4 +41,8 @@ January 2024
 
 * [x] I have read a book called **ดูแวบแรกเป็นคนดีนี่แหละตัวดี [Sōta Shimozono, 下園 壮太(ชิโมโซโนะ โซตะ), ณัฐกฤตา เพ็ญกุล (Translator)]**.
 
+* [x] I have read a book called **เมื่อผมใช้จิตวิทยาเอาตัวรอด (และรุ่งเรือง) ในสมรภูมิออฟฟิศ [Ross McCammon, ธนภัส สมธิรักษ์ (Translator)]**.
+
+* [ ] I have read a book called **Red Flags vs Green Flags: ไปกันต่อหรือพอกันที [Ali Fenwick, ไอริสา ชั้นศิริ (Translator)]**.
+
 ## General prompts
