docs: add book to read

--- a/2024.md
+++ b/2024.md
@@ -43,6 +43,6 @@ May 2024
 
 * [x] I have read a book called **เมื่อผมใช้จิตวิทยาเอาตัวรอด (และรุ่งเรือง) ในสมรภูมิออฟฟิศ [Ross McCammon, ธนภัส สมธิรักษ์ (Translator)]**.
 
-* [ ] I have read a book called **Red Flags vs Green Flags: ไปกันต่อหรือพอกันที [Ali Fenwick, ไอริสา ชั้นศิริ (Translator)]**.
+* [x] I have read a book called **Red Flags vs Green Flags: ไปกันต่อหรือพอกันที [Ali Fenwick, ไอริสา ชั้นศิริ (Translator)]**.
 
 ## General prompts
