docs: update book to read

--- a/2024.md
+++ b/2024.md
@@ -45,4 +45,6 @@ May 2024
 
 * [x] I have read a book called **Red Flags vs Green Flags: ไปกันต่อหรือพอกันที [Ali Fenwick, ไอริสา ชั้นศิริ (Translator)]**.
 
+* [x] I have read a book called **ไม่ใช่แค่ชาหอมกรุ่นกับขนแมวนุ่มฟูหรอกที่เป็นความสุขเล็กๆ [Hannah Jane Parkinson, ณิชาภา ชิวะสุจินต์ (Translator)]**.
+
 ## General prompts
