docs: add new book to read

--- a/2024.md
+++ b/2024.md
@@ -47,4 +47,6 @@ May 2024
 
 * [x] I have read a book called **ไม่ใช่แค่ชาหอมกรุ่นกับขนแมวนุ่มฟูหรอกที่เป็นความสุขเล็กๆ [Hannah Jane Parkinson, ณิชาภา ชิวะสุจินต์ (Translator)]**.
 
+* [x] I have read a book called **เลิกคิดลบนะ คนดี [Gary John Bishop, กิตติกานต์ อิศระ (Translator)]**.
+
 ## General prompts
