docs: add new book to read

--- a/2024.md
+++ b/2024.md
@@ -49,4 +49,6 @@ May 2024
 
 * [x] I have read a book called **เลิกคิดลบนะ คนดี [Gary John Bishop, กิตติกานต์ อิศระ (Translator)]**.
 
+* [x] I have read a book called **Mini Habits “นิสัยจิ๋ว” ของคนที่ประสบความสำเร็จ [Den Satoh, 佐藤伝, ณัฐกฤตา เพ็ญกุล (Translator)]**.
+
 ## General prompts
