docs: add book to read

--- a/2024.md
+++ b/2024.md
@@ -51,8 +51,8 @@ May 2024
 
 * [x] I have read a book called **Mini Habits “นิสัยจิ๋ว” ของคนที่ประสบความสำเร็จ [Den Satoh, 佐藤伝, ณัฐกฤตา เพ็ญกุล (Translator)]**.
 
-* [ ] I have read a book called **The Nature of Software Development [Ron Jeffries]**.
+* [x] I have read a book called **The Nature of Software Development [Ron Jeffries]**.
 
-* [ ] I have read a book called **มนุษย์เป็นสัตว์สังคม แค่บางวันก็พอ! [Jam]**.
+* [x] I have read a book called **มนุษย์เป็นสัตว์สังคม แค่บางวันก็พอ! [Jam]**.
 
 ## General prompts
