docs: add new course to learn

--- a/2024.md
+++ b/2024.md
@@ -4,7 +4,9 @@
 
 [comment]: # (* List the major goals here!)
 
-May 2024
+July 2024
+
+* [x] I want to take a course **Haskell Crash Course**.
 
 ## Goals for next year
 
