docs: add book to read

--- a/2024.md
+++ b/2024.md
@@ -57,6 +57,6 @@ July 2024
 
 * [x] I have read a book called **มนุษย์เป็นสัตว์สังคม แค่บางวันก็พอ! [Jam]**.
 
-* [] I have read a book called **บริษัทตัวคนเดียว: ทำไมการคิดเล็กจึงเป็นโมเดลธุรกิจแห่งอนาคต [Paul Jarvis, โชติกา โชติสรยุทธ์ (Translator)]**.
+* [x] I have read a book called **บริษัทตัวคนเดียว: ทำไมการคิดเล็กจึงเป็นโมเดลธุรกิจแห่งอนาคต [Paul Jarvis, โชติกา โชติสรยุทธ์ (Translator)]**.
 
 ## General prompts
