docs: add new book to current reading

--- a/2024.md
+++ b/2024.md
@@ -59,4 +59,6 @@ July 2024
 
 * [x] I have read a book called **บริษัทตัวคนเดียว: ทำไมการคิดเล็กจึงเป็นโมเดลธุรกิจแห่งอนาคต [Paul Jarvis, โชติกา โชติสรยุทธ์ (Translator)]**.
 
+* [ ] I have read a book called **Who Not How: ความสำเร็จเริ่มจากรายล้อมตัวเองด้วยคนที่ใช่ [Dan Sullivan, Dr .Benjamin Hardy]**.
+
 ## General prompts
