--- a/2024.md
+++ b/2024.md
@@ -61,6 +61,6 @@ July 2024
 
 * [x] I have read a book called **QBQ! The Question Behind The Question: คำถามที่ซ่อนอยู่ในคำถาม [John G. Miller]**.
 
-* [ ] I have read a book called **Who Not How: ความสำเร็จเริ่มจากรายล้อมตัวเองด้วยคนที่ใช่ [Dan Sullivan, Dr .Benjamin Hardy]**.
+* [x] I have read a book called **Who Not How: ความสำเร็จเริ่มจากรายล้อมตัวเองด้วยคนที่ใช่ [Dan Sullivan, Dr .Benjamin Hardy]**.
 
 ## General prompts
