docs: add new book to read

--- a/2024.md
+++ b/2024.md
@@ -63,4 +63,6 @@ July 2024
 
 * [x] I have read a book called **Who Not How: ความสำเร็จเริ่มจากรายล้อมตัวเองด้วยคนที่ใช่ [Dan Sullivan, Dr .Benjamin Hardy]**.
 
+* [x] I have read a book called **ยิ่งหิวยิ่งอายุยืน [Yoshinori Nagumo, พิมพ์รัก สุขสวัสดิ์ (Translator)]**
+
 ## General prompts
