docs: add book to read

--- a/2024.md
+++ b/2024.md
@@ -65,6 +65,6 @@ July 2024
 
 * [x] I have read a book called **ยิ่งหิวยิ่งอายุยืน [Yoshinori Nagumo, พิมพ์รัก สุขสวัสดิ์ (Translator)]**
 
-* [ ] I have read a book called **คัมภีร์หน้าหนา [Jia Jiang, พรรณี ชูจิรวงศ์ (Translator)]**
+* [x] I have read a book called **คัมภีร์หน้าหนา [Jia Jiang, พรรณี ชูจิรวงศ์ (Translator)]**
 
 ## General prompts
