docs: add new project to contributes

--- a/2024.md
+++ b/2024.md
@@ -14,6 +14,26 @@ July 2024
 
 ## Projects
 
+### [Gleam](https://github.com/gleam-lang/gleam) is a friendly language for building type-safe, scalable systems! ✨
+
+**Contributions:** [Fix unable compatible with new version of gleamlang](https://github.com/lpil/zeptomail/pull/1)
+  
+**Scope:** Package
+  
+**Impact:** package is compatible with new version of gleamlang.
+
+**Contributions:** [Update function "at" in stdlib of list deprecated](https://github.com/mrdimosthenis/minigen/pull/4)
+  
+**Scope:** Package
+  
+**Impact:** package is compatible with new version of gleamlang.
+
+**Contributions:** [fix(validate-email): email could contain multiple char in prefix/suffix](https://github.com/sporto/gleam-valid/pull/4)
+  
+**Scope:** Package
+  
+**Impact:** fix invalid email pattern.
+
 ## Collaboration & mentorship
 * Mentoring interns / helping new team members get started
 
