--- a/2024.md
+++ b/2024.md
@@ -16,23 +16,23 @@ July 2024
 
 ### [Gleam](https://github.com/gleam-lang/gleam) is a friendly language for building type-safe, scalable systems! ✨
 
-**Contributions:** [Fix unable compatible with new version of gleamlang](https://github.com/lpil/zeptomail/pull/1)
+**Contributions:** [Fixed compatibility with the latest version of Gleam.](https://github.com/lpil/zeptomail/pull/1)
   
 **Scope:** Package
   
-**Impact:** package is compatible with new version of gleamlang.
+**Impact:** Maintained compatibility with the new version of Gleam.
 
-**Contributions:** [Update function "at" in stdlib of list deprecated](https://github.com/mrdimosthenis/minigen/pull/4)
+**Contributions:** [Updated the deprecated at function in the standard library for lists.](https://github.com/mrdimosthenis/minigen/pull/4)
   
 **Scope:** Package
   
-**Impact:** package is compatible with new version of gleamlang.
+**Impact:** Maintained compatibility with the new version of Gleam.
 
-**Contributions:** [fix(validate-email): email could contain multiple char in prefix/suffix](https://github.com/sporto/gleam-valid/pull/4)
+**Contributions:** [Improved email validation to allow multiple characters in the prefix/suffix.](https://github.com/sporto/gleam-valid/pull/4)
   
 **Scope:** Package
   
-**Impact:** fix invalid email pattern.
+**Impact:** Corrected invalid email patterns.
 
 ## Collaboration & mentorship
 * Mentoring interns / helping new team members get started
