--- a/2024.md
+++ b/2024.md
@@ -87,6 +87,6 @@ July 2024
 
 * [x] I have read a book called **คัมภีร์หน้าหนา [Jia Jiang, พรรณี ชูจิรวงศ์ (Translator)]**
 
-* [x] I have read a book called **งียบเป็นต่อ [Sylvia Loehken, พรรณี ชูจิรวงศ์(Translator)]**
+* [x] I have read a book called **เงียบเป็นต่อ [Sylvia Loehken, พรรณี ชูจิรวงศ์(Translator)]**
 
 ## General prompts
