docs: add Goals for this year and new book to read

--- a/2024.md
+++ b/2024.md
@@ -6,7 +6,11 @@
 
 July 2024
 
-* [x] I want to take a course **Haskell Crash Course**.
+* [x] Complete the Haskell Crash Course.
+
+Sep 2024
+
+* [ ] Read _Effective Engineering Teams: Lessons for Individual Contributors and Managers from 10 Years at Google_
 
 ## Goals for next year
 
@@ -45,48 +49,50 @@ July 2024
 
 ## Outside of work
 
-* [x] I have read a book called **ซ่อมแซมสุขที่สึกหรอ [Guy Winch, ลลิตา ผลผลา (Translator)]**.
+* [x] Read _ซ่อมแซมสุขที่สึกหรอ [Guy Winch, ลลิตา ผลผลา (Translator)]_.
 
-* [x] I have read a book called **คุณคางคกไปพบนักจิตบำบัด [Robert De Board, อรดา ลีลานุช (Translator)]**.
+* [x] Read _คุณคางคกไปพบนักจิตบำบัด [Robert De Board, อรดา ลีลานุช (Translator)]_.
 
-* [x] I have read a book called **ฉันก็แค่ไม่ชอบโลกที่วุ่นวาย [Maureen Marzi Wilson, พรเลิศ อิฐฐ์ (Translator)]**.
+* [x] Read _ฉันก็แค่ไม่ชอบโลกที่วุ่นวาย [Maureen Marzi Wilson, พรเลิศ อิฐฐ์ (Translator)]_.
 
-* [x] I have read a book called **Thinking in Algorithms: How to Combine Computer Analysis and Human Creativity for Better Problem-Solving and Decision-Making [Albert Rutherford]**.
+* [x] Read _Thinking in Algorithms: How to Combine Computer Analysis and Human Creativity for Better Problem-Solving and Decision-Making [Albert Rutherford]_.
 
-* [x] I have read a book called **ช่างมันเถอะ ! อีกไม่กี่ปีเราก็เป็นเถ้าธุลีกันหมดแล้ว [Fujino Tomoya, กมลวรรณ เพ็ญอร่าม (Translator)]**.
+* [x] Read _ช่างมันเถอะ ! อีกไม่กี่ปีเราก็เป็นเถ้าธุลีกันหมดแล้ว [Fujino Tomoya, กมลวรรณ เพ็ญอร่าม (Translator)]_.
 
-* [x] I have read a book called **ในออฟฟิศมี "พี่คนนั้น" คนที่ทำให้วันจันทร์โคตรน่าเบื่อ [Peter Economy, พัดชา (Translator)]**.
+* [x] Read _ในออฟฟิศมี "พี่คนนั้น" คนที่ทำให้วันจันทร์โคตรน่าเบื่อ [Peter Economy, พัดชา (Translator)]_.
 
-* [x] I have read a book called **ถ้าอีก 1 ปีฉันจะต้องตาย... [Taketoshi Ozawa, 小澤 竹俊, วรพล สิงขรอาจ]**.
+* [x] Read _ถ้าอีก 1 ปีฉันจะต้องตาย... [Taketoshi Ozawa, 小澤 竹俊, วรพล สิงขรอาจ]_.
 
-* [x] I have read a book called **เมื่อทุกอย่างปกติดี ก็ถึงเวลาที่ต้องเปลี่ยนแปลง [John P. Kotter, Holger Rathgeber, ปิติ วัฒนาธร (Translator)]**.
+* [x] Read _เมื่อทุกอย่างปกติดี ก็ถึงเวลาที่ต้องเปลี่ยนแปลง [John P. Kotter, Holger Rathgeber, ปิติ วัฒนาธร (Translator)]_.
 
-* [x] I have read a book called **ดูแวบแรกเป็นคนดีนี่แหละตัวดี [Sōta Shimozono, 下園 壮太(ชิโมโซโนะ โซตะ), ณัฐกฤตา เพ็ญกุล (Translator)]**.
+* [x] Read _ดูแวบแรกเป็นคนดีนี่แหละตัวดี [Sōta Shimozono, 下園 壮太(ชิโมโซโนะ โซตะ), ณัฐกฤตา เพ็ญกุล (Translator)]_.
 
-* [x] I have read a book called **เมื่อผมใช้จิตวิทยาเอาตัวรอด (และรุ่งเรือง) ในสมรภูมิออฟฟิศ [Ross McCammon, ธนภัส สมธิรักษ์ (Translator)]**.
+* [x] Read _เมื่อผมใช้จิตวิทยาเอาตัวรอด (และรุ่งเรือง) ในสมรภูมิออฟฟิศ [Ross McCammon, ธนภัส สมธิรักษ์ (Translator)]_.
 
-* [x] I have read a book called **Red Flags vs Green Flags: ไปกันต่อหรือพอกันที [Ali Fenwick, ไอริสา ชั้นศิริ (Translator)]**.
+* [x] Read _Red Flags vs Green Flags: ไปกันต่อหรือพอกันที [Ali Fenwick, ไอริสา ชั้นศิริ (Translator)]_.
 
-* [x] I have read a book called **ไม่ใช่แค่ชาหอมกรุ่นกับขนแมวนุ่มฟูหรอกที่เป็นความสุขเล็กๆ [Hannah Jane Parkinson, ณิชาภา ชิวะสุจินต์ (Translator)]**.
+* [x] Read _ไม่ใช่แค่ชาหอมกรุ่นกับขนแมวนุ่มฟูหรอกที่เป็นความสุขเล็กๆ [Hannah Jane Parkinson, ณิชาภา ชิวะสุจินต์ (Translator)]_.
 
-* [x] I have read a book called **เลิกคิดลบนะ คนดี [Gary John Bishop, กิตติกานต์ อิศระ (Translator)]**.
+* [x] Read _เลิกคิดลบนะ คนดี [Gary John Bishop, กิตติกานต์ อิศระ (Translator)]_.
 
-* [x] I have read a book called **Mini Habits “นิสัยจิ๋ว” ของคนที่ประสบความสำเร็จ [Den Satoh, 佐藤伝, ณัฐกฤตา เพ็ญกุล (Translator)]**.
+* [x] Read _Mini Habits “นิสัยจิ๋ว” ของคนที่ประสบความสำเร็จ [Den Satoh, 佐藤伝, ณัฐกฤตา เพ็ญกุล (Translator)]_.
 
-* [x] I have read a book called **The Nature of Software Development [Ron Jeffries]**.
+* [x] Read _The Nature of Software Development [Ron Jeffries]_.
 
-* [x] I have read a book called **มนุษย์เป็นสัตว์สังคม แค่บางวันก็พอ! [Jam]**.
+* [x] Read _มนุษย์เป็นสัตว์สังคม แค่บางวันก็พอ! [Jam]_.
 
-* [x] I have read a book called **บริษัทตัวคนเดียว: ทำไมการคิดเล็กจึงเป็นโมเดลธุรกิจแห่งอนาคต [Paul Jarvis, โชติกา โชติสรยุทธ์ (Translator)]**.
+* [x] Read _บริษัทตัวคนเดียว: ทำไมการคิดเล็กจึงเป็นโมเดลธุรกิจแห่งอนาคต [Paul Jarvis, โชติกา โชติสรยุทธ์ (Translator)]_.
 
-* [x] I have read a book called **QBQ! The Question Behind The Question: คำถามที่ซ่อนอยู่ในคำถาม [John G. Miller]**.
+* [x] Read _QBQ! The Question Behind The Question: คำถามที่ซ่อนอยู่ในคำถาม [John G. Miller]_.
 
-* [x] I have read a book called **Who Not How: ความสำเร็จเริ่มจากรายล้อมตัวเองด้วยคนที่ใช่ [Dan Sullivan, Dr .Benjamin Hardy]**.
+* [x] Read _Who Not How: ความสำเร็จเริ่มจากรายล้อมตัวเองด้วยคนที่ใช่ [Dan Sullivan, Dr .Benjamin Hardy]_.
 
-* [x] I have read a book called **ยิ่งหิวยิ่งอายุยืน [Yoshinori Nagumo, พิมพ์รัก สุขสวัสดิ์ (Translator)]**
+* [x] Read _ยิ่งหิวยิ่งอายุยืน [Yoshinori Nagumo, พิมพ์รัก สุขสวัสดิ์ (Translator)]_
 
-* [x] I have read a book called **คัมภีร์หน้าหนา [Jia Jiang, พรรณี ชูจิรวงศ์ (Translator)]**
+* [x] Read _คัมภีร์หน้าหนา [Jia Jiang, พรรณี ชูจิรวงศ์ (Translator)]_
 
-* [x] I have read a book called **เงียบเป็นต่อ [Sylvia Loehken, พรรณี ชูจิรวงศ์(Translator)]**
+* [x] Read _เงียบเป็นต่อ [Sylvia Loehken, พรรณี ชูจิรวงศ์ (Translator)]_
+
+* [ ] Read _วิชารู้รอบ [David Epstein, ทีปกร วุฒิพิทยามงคล (Translator)]_
 
 ## General prompts
