docs: add goals for next year

--- a/2024.md
+++ b/2024.md
@@ -10,9 +10,13 @@ July 2024
 
 Sep 2024
 
-* [ ] Read _Effective Engineering Teams: Lessons for Individual Contributors and Managers from 10 Years at Google_
+* [ ] Read _Effective Engineering Teams: Lessons for Individual Contributors and Managers from 10 Years at Google._
 
 ## Goals for next year
+
+* Begin offering the course _Thinking Recursively: Part 1_.
+
+* Read _The Beauty of Falling: A Life in Pursuit of Gravity [Claudia de Rham]_
 
 [comment]: # (* If it's getting towards the end of the year, maybe start writing down what might be the goals for next year.)
 
