docs: update link to gleam repo

--- a/2024.md
+++ b/2024.md
@@ -44,7 +44,7 @@ Sep 2024
 
 ### [Crappy-Board](https://github.com/mrgleam/crappy-board)
 
-Crappy-Board is a task management project written in **Gleam**, a statically typed functional programming language for the Erlang ecosystem. It features a simple board with three lanes: **ToDo**, **Doing**, and **Done**, providing an intuitive way to track task progress. The project emphasizes simplicity and usability, making it ideal for quick overviews or personal task management.
+Crappy-Board is a task management project written in [Gleam](https://github.com/gleam-lang/gleam), a statically typed functional programming language for the Erlang ecosystem. It features a simple board with three lanes: **ToDo**, **Doing**, and **Done**, providing an intuitive way to track task progress. The project emphasizes simplicity and usability, making it ideal for quick overviews or personal task management.
 
 End-to-end testing is implemented using Playwright to ensure the board’s functionality and stability. The project also leverages a GitHub Actions pipeline for automated testing and deployment, and Pulumi is used for managing cloud infrastructure.
 
