docs: update Goals for next year

--- a/2024.md
+++ b/2024.md
@@ -16,7 +16,10 @@ Sep 2024
 
 * Begin offering the course _Thinking Recursively: Part 1_.
 
-* Read _The Beauty of Falling: A Life in Pursuit of Gravity [Claudia de Rham]_
+* Read _The Beauty of Falling: A Life in Pursuit of Gravity [Claudia de Rham]._
+
+* Establish a Community of Practice (CoP) for algorithm analysis. [View the report plan here](https://github.com/mrgleam/CoP-Algorithm-Analysis/blob/main/README.md).
+
 
 [comment]: # (* If it's getting towards the end of the year, maybe start writing down what might be the goals for next year.)
 
