docs: add year plan overview for 2025

--- a/2024.md
+++ b/2024.md
@@ -14,6 +14,18 @@ Sep 2024
 
 ## Goals for next year
 
+[Year Plan Overview](https://github.com/mrgleam/brag-documents/blob/main/Year-Plan-Overview/2025/2025.md)
+
+#### 1. Translating "Leading Effective Engineer Team"
+
+#### 2. IELTS Preparation to Achieve Band 6
+
+#### 3. Acting Class
+
+#### 4. Running a 10K in Under 60 Minutes
+
+#### 5. Additional Goals
+
 * Begin offering the course _Thinking Recursively: Part 1_.
 
 * Read _The Beauty of Falling: A Life in Pursuit of Gravity [Claudia de Rham]._
