fix: broken link

--- a/2024.md
+++ b/2024.md
@@ -14,7 +14,7 @@ Sep 2024
 
 ## Goals for next year
 
-[Year Plan Overview](https://github.com/mrgleam/brag-documents/blob/main/Year-Plan-Overview/2025/2025.md)
+[Year Plan Overview](https://github.com/mrgleam/brag-documents/blob/main/Year%20Plan%20Overview/2025/2025.md)
 
 #### 1. Translating "Leading Effective Engineer Team"
 
