--- a/Year Plan Overview/2025/2025.md
+++ b/Year Plan Overview/2025/2025.md
@@ -4,7 +4,7 @@
 **Time Allocation**: Each goal has a specific timeline, and some goals will overlap.  
 **Focus Areas**: Language skills, physical fitness, and personal development.
 
-## 1. Translating "Leading Effective Engineer Team"
+## 1. Translating "Leading Effective Engineering Team"
 - **Duration**: Months 1–6
 - **Weekly Commitment**: 6–8 hours
 
