docs: make book to read

--- a/2024.md
+++ b/2024.md
@@ -120,6 +120,6 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 
 * [x] Read _เงียบเป็นต่อ [Sylvia Loehken, พรรณี ชูจิรวงศ์ (Translator)]_
 
-* [ ] Read _วิชารู้รอบ [David Epstein, ทีปกร วุฒิพิทยามงคล (Translator)]_
+* [x] Read _วิชารู้รอบ [David Epstein, ทีปกร วุฒิพิทยามงคล (Translator)]_
 
 ## General prompts
