docs: extending All Aspects of Algorithms

--- a/2024.md
+++ b/2024.md
@@ -30,7 +30,7 @@ Sep 2024
 
 * Read _The Beauty of Falling: A Life in Pursuit of Gravity [Claudia de Rham]._
 
-* Establish a Community of Practice (CoP) for algorithm analysis. [View the report plan here](https://github.com/mrgleam/CoP-Algorithm-Analysis/blob/main/README.md).
+* Establish a Community of Practice (CoP) for algorithms. [View the report plan here](https://github.com/mrgleam/CoP-Algorithms/blob/main/README.md).
 
 
 [comment]: # (* If it's getting towards the end of the year, maybe start writing down what might be the goals for next year.)
