docs: add new book to read

--- a/2024.md
+++ b/2024.md
@@ -122,4 +122,6 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 
 * [x] Read _วิชารู้รอบ [David Epstein, ทีปกร วุฒิพิทยามงคล (Translator)]_
 
+* [x] Read _Coaching เทคนิคกระตุ้นทีมจนสำเร็จ [Homma Masato, วิธารณี จงสถิตย์วัฒนา (แปล), ฮมมะ มะซะโตะ]_
+
 ## General prompts
