docs: add authored an article

--- a/2024.md
+++ b/2024.md
@@ -124,4 +124,6 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 
 * [x] Read _Coaching เทคนิคกระตุ้นทีมจนสำเร็จ [Homma Masato, วิธารณี จงสถิตย์วัฒนา (แปล), ฮมมะ มะซะโตะ]_
 
+* I authored an article titled [GROW Model: เครื่องมือที่ใช้ในการพัฒนาผู้นำและการโค้ช](https://medium.com/odds-team/grow-model-เครื่องมือที่ทรงพลังในการพัฒนาผู้นำและการโค้ช-dc5e0f5dfe42)
+
 ## General prompts
