--- a/2024.md
+++ b/2024.md
@@ -124,6 +124,8 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 
 * [x] Read _Coaching เทคนิคกระตุ้นทีมจนสำเร็จ [Homma Masato, วิธารณี จงสถิตย์วัฒนา (แปล), ฮมมะ มะซะโตะ]_
 
+* I authored an article titled [ลองใช้งาน pulumi และ scala 3 เพื่อสร้าง server บน hetzner cloud](https://medium.com/odds-team/ลองใช้งาน-pulumi-และ-scala-3-เพื่อสร้าง-server-บน-hetzner-cloud-a442b02b6436)
+
 * I authored an article titled [GROW Model: เครื่องมือที่ใช้ในการพัฒนาผู้นำและการโค้ช](https://medium.com/odds-team/grow-model-เครื่องมือที่ทรงพลังในการพัฒนาผู้นำและการโค้ช-dc5e0f5dfe42)
 
 ## General prompts
