docs: authored an article updated

--- a/2024.md
+++ b/2024.md
@@ -126,6 +126,16 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 
 * I authored an article titled [ลองใช้งาน pulumi และ scala 3 เพื่อสร้าง server บน hetzner cloud](https://medium.com/odds-team/ลองใช้งาน-pulumi-และ-scala-3-เพื่อสร้าง-server-บน-hetzner-cloud-a442b02b6436)
 
+* I authored an article titled [จุดอ่อน |> เรื่องเล่า |> กล้ามเนื้อ](https://medium.com/@mrgleam/จุดอ่อน-เรื่องเล่า-กล้ามเนื้อ-a4c0aea3ba6a)
+
+* I authored an article titled [การปล่อยวางเครื่องมือ: การรู้ว่าเมื่อใดควรใช้อะไรที่เรามี](https://medium.com/odds-team/การปล่อยวางเครื่องมือ-การรู้ว่าเมื่อใดควรใช้อะไรที่เรามี-78e1367652cd)
+
+* I authored an article titled [การได้ทำงานกับทีมที่ดี](https://medium.com/@mrgleam/การได้ทำงานกับทีมที่ดี-e1517ba4a456)
+
+* I authored an article titled [การละคร กับ ผู้นำ](https://medium.com/odds-team/การละคร-กับ-ผู้นำ-f4b2e2e64490)
+
+* I authored an article titled [5W1H: เครื่องมือที่ทรงพลังในการเข้าใจทุกมุมมอง](https://medium.com/odds-team/5w1h-เครื่องมือที่ทรงพลังในการเข้าใจทุกมุมมอง-22b16d6522b7)
+
 * I authored an article titled [GROW Model: เครื่องมือที่ใช้ในการพัฒนาผู้นำและการโค้ช](https://medium.com/odds-team/grow-model-เครื่องมือที่ทรงพลังในการพัฒนาผู้นำและการโค้ช-dc5e0f5dfe42)
 
 ## General prompts
