docs: add activity in Oct 2024

--- a/2024.md
+++ b/2024.md
@@ -12,6 +12,10 @@ Sep 2024
 
 * [ ] Read _Effective Engineering Teams: Lessons for Individual Contributors and Managers from 10 Years at Google._
 
+Oct 2024
+
+* [x] I attended an Acting class for leaders.
+
 ## Goals for next year
 
 [Year Plan Overview](https://github.com/mrgleam/brag-documents/blob/main/Year%20Plan%20Overview/2025/2025.md)
