docs: add new article

--- a/2024.md
+++ b/2024.md
@@ -142,4 +142,8 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 
 * I authored an article titled [GROW Model: เครื่องมือที่ใช้ในการพัฒนาผู้นำและการโค้ช](https://medium.com/odds-team/grow-model-เครื่องมือที่ทรงพลังในการพัฒนาผู้นำและการโค้ช-dc5e0f5dfe42)
 
+* I authored an article titled [รีวิวคลาส The Art of Storytelling](https://medium.com/odds-team/รีวิวคลาส-the-art-of-storytelling-0551e0c356ae)
+
 ## General prompts
+
+* We are not hiring.
