docs: add new book to read

--- a/2024.md
+++ b/2024.md
@@ -128,6 +128,9 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 
 * [x] Read _Coaching เทคนิคกระตุ้นทีมจนสำเร็จ [Homma Masato, วิธารณี จงสถิตย์วัฒนา (แปล), ฮมมะ มะซะโตะ]_
 
+* [x] Read _อย่ากลัวที่จะกอดเม่นตัวนั้น: วิธีรักคนยากๆ ที่เราต้องมีในชีวิต [Hatherleigh Press, วริษฐา กาลามเกษตร์
+(Translator), นุชชา ประพิณ (Illustrator)]_
+
 * I authored an article titled [ลองใช้งาน pulumi และ scala 3 เพื่อสร้าง server บน hetzner cloud](https://medium.com/odds-team/ลองใช้งาน-pulumi-และ-scala-3-เพื่อสร้าง-server-บน-hetzner-cloud-a442b02b6436)
 
 * I authored an article titled [จุดอ่อน |> เรื่องเล่า |> กล้ามเนื้อ](https://medium.com/@mrgleam/จุดอ่อน-เรื่องเล่า-กล้ามเนื้อ-a4c0aea3ba6a)
