docs: add authored an article

--- a/2024.md
+++ b/2024.md
@@ -149,6 +149,8 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 
 * I authored an article titled [รีวิวคลาส The Art of Storytelling](https://medium.com/odds-team/รีวิวคลาส-the-art-of-storytelling-0551e0c356ae)
 
+* I authored an article titled [สิ่งที่ผู้นำที่ดีสอนฉันในเช้าวันนี้](https://medium.com/odds-team/สิ่งที่ผู้นำที่ดีสอนฉันในเช้าวันนี้-ee9f0c5d1ac9)
+
 ## General prompts
 
 * We are not hiring.
