docs: add book to read

--- a/2024.md
+++ b/2024.md
@@ -131,7 +131,7 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 * [x] Read _อย่ากลัวที่จะกอดเม่นตัวนั้น: วิธีรักคนยากๆ ที่เราต้องมีในชีวิต [Hatherleigh Press, วริษฐา กาลามเกษตร์
 (Translator), นุชชา ประพิณ (Illustrator)]_
 
-* [ ] Read _คู่มือฝึกฝนให้เป็นคนใจดี [Henry James Garrett, เพียงขวัญ ลักษณ์แสงวิไล (Translator)]_
+* [x] Read _คู่มือฝึกฝนให้เป็นคนใจดี [Henry James Garrett, เพียงขวัญ ลักษณ์แสงวิไล (Translator)]_
 
 * I authored an article titled [ลองใช้งาน pulumi และ scala 3 เพื่อสร้าง server บน hetzner cloud](https://medium.com/odds-team/ลองใช้งาน-pulumi-และ-scala-3-เพื่อสร้าง-server-บน-hetzner-cloud-a442b02b6436)
 
