docs: add authored an article

--- a/2024.md
+++ b/2024.md
@@ -153,6 +153,8 @@ Check out the project on GitHub: [Crappy-Board](https://github.com/mrgleam/crapp
 
 * I authored an article titled [สิ่งที่ผู้นำที่ดีสอนฉันในเช้าวันนี้](https://medium.com/odds-team/สิ่งที่ผู้นำที่ดีสอนฉันในเช้าวันนี้-ee9f0c5d1ac9)
 
+* I authored an article titled [รีวิวคลาส Collection of Software Development & Digital Transformation Lectures](https://medium.com/@mrgleam/รีวิวคลาส-collection-of-software-development-digital-transformation-lectures-09939c991eb5)
+
 ## General prompts
 
 * We are not hiring.
